# business_analysis_workflow

./: .gitignore  AI_Augmented_SDLC_Project_Assignment.docx  BA workflow.drawio  Explaination  business_requirement.json  business_requirement_raw.txt
automated_ba_crews/: .gitignore  README.md  pyproject.toml
automated_ba_crews/src/automated_ba_crews/: ba_agents.py  ba_tasks.py  conditional_crew.py  crew.py  main.py
automated_ba_crews/src/automated_ba_crews/config/: agents.yaml  tasks.yaml
