[project]
name = "automated_ba_crews"
version = "0.1.0"
description = "automated_BA_crews using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
automated_ba_crews = "automated_ba_crews.main:run"
run_crew = "automated_ba_crews.main:run"
train = "automated_ba_crews.main:train"
replay = "automated_ba_crews.main:replay"
test = "automated_ba_crews.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
